--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>BOC — Beacon of Civilization</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
+<meta charset="utf-8"/>
+<title>BOC — Beacon of Civilization</title>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<style>
         body {
             margin: 0;
             font-family: 'Georgia', serif;
@@ -63,39 +64,34 @@
     </style>
 </head>
 <body>
-    <img src="images/logo.png" alt="BOC Logo">
-    <h1>There is BTC in the world,<br>how can BOC be absent?</h1>
-    <h2>A token that guards not just value, but civilization.</h2>
-
-    <div>
-        <a class="btn" href="https://solscan.io/token/99oAQkuwi9BcRX2xXzqLTgKbmaZex63tmJAcnDGhDDJQ" target="_blank">View Token</a>
-        <a class="btn" href="https://t.me/BoconiaOfficial" target="_blank">Join Telegram</a>
-        <a class="btn" href="https://x.com/BOCcivil" target="_blank">Follow on X</a>
-    </div>
-
-    <div class="section">
-        <h2>What is BOC?</h2>
-        <p>BOC, short for Beacon of Civilization, is more than just a token. It is a decentralized sanctuary created on the Solana blockchain—dedicated to freedom, dignity, and the defense of civil values in the digital age. While Bitcoin stands for trust, BOC stands for everything we choose to guard.</p>
-    </div>
-
-    <div class="section">
-        <h2>Token Details</h2>
-        <ul>
-            <li><strong>Name:</strong> Boconia (BOC)</li>
-            <li><strong>Total Supply:</strong> 210,000,000</li>
-            <li><strong>Blockchain:</strong> Solana</li>
-            <li><strong>Token Address:</strong> <a href="https://solscan.io/token/99oAQkuwi9BcRX2xXzqLTgKbmaZex63tmJAcnDGhDDJQ" target="_blank">99oAQ...</a></li>
-        </ul>
-    </div>
-
-    <div class="section">
-        <h2>Connect with Us</h2>
-        <p>Join the growing community of digital citizens who believe in the values of decentralization and integrity.</p>
-        <ul>
-            <li><a href="https://x.com/BOCcivil" target="_blank">Follow us on X</a></li>
-            <li><a href="https://t.me/BoconiaOfficial" target="_blank">Join our Telegram</a></li>
-            <li><a href="https://www.boconia.com" target="_blank">Visit our website</a></li>
-        </ul>
-    </div>
-
-
+<img alt="BOC Logo" src="images/logo.png"/>
+<h1>There is BTC in the world,<br/>how can BOC be absent?</h1>
+<h2>A token that guards not just value, but civilization.</h2>
+<div>
+<a class="btn" href="https://solscan.io/token/99oAQkuwi9BcRX2xXzqLTgKbmaZex63tmJAcnDGhDDJQ" target="_blank">View Token</a>
+<a class="btn" href="https://t.me/BoconiaOfficial" target="_blank">Join Telegram</a>
+<a class="btn" href="https://x.com/BOCcivil" target="_blank">Follow on X</a>
+</div>
+<div class="section">
+<h2>What is BOC?</h2>
+<p>BOC, short for Beacon of Civilization, is more than just a token. It is a decentralized sanctuary created on the Solana blockchain—dedicated to freedom, dignity, and the defense of civil values in the digital age. While Bitcoin stands for trust, BOC stands for everything we choose to guard.</p>
+</div>
+<div class="section">
+<h2>Token Details</h2>
+<ul>
+<li><strong>Name:</strong> Boconia (BOC)</li>
+<li><strong>Total Supply:</strong> 210,000,000</li>
+<li><strong>Blockchain:</strong> Solana</li>
+<li><strong>Token Address:</strong> <a href="https://solscan.io/token/99oAQkuwi9BcRX2xXzqLTgKbmaZex63tmJAcnDGhDDJQ" target="_blank">99oAQ...</a></li>
+</ul>
+</div>
+<div class="section"><h2>Whitepaper</h2><p>Our vision for the future is documented in the BOC Whitepaper. <br/><a href="/whitepaper/chapter7.pdf" target="_blank">Read Chapter 7: Civic Trust Loan</a></p></div><div class="section">
+<h2>Connect with Us</h2>
+<p>Join the growing community of digital citizens who believe in the values of decentralization and integrity.</p>
+<ul>
+<li><a href="https://x.com/BOCcivil" target="_blank">Follow us on X</a></li>
+<li><a href="https://t.me/BoconiaOfficial" target="_blank">Join our Telegram</a></li>
+<li><a href="https://www.boconia.com" target="_blank">Visit our website</a></li>
+</ul>
+</div>
+</body></html>
