--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </style>
 </head>
 <body>
-<img alt="BOC Logo" src="images/logo.png"/>
+<img alt="BOC Logo" src="logo.png"/>
 <h1>There is BTC in the world,<br/>how can BOC be absent?</h1>
 <h2>A token that guards not just value, but civilization.</h2>
 <div>
