--- a/index.html
+++ b/index.html
@@ -1,97 +1,69 @@
-
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<title>BOC — Beacon of Civilization</title>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<style>
-        body {
-            margin: 0;
-            font-family: 'Georgia', serif;
-            background-color: #0d2b1e;
-            color: #d4af37;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-            padding: 20px;
-        }
-        img {
-            max-width: 180px;
-            margin-top: 30px;
-        }
-        h1 {
-            font-size: 2em;
-            margin: 20px 0 10px;
-            letter-spacing: 1px;
-        }
-        h2 {
-            font-size: 1.3em;
-            margin: 10px 0 20px;
-        }
-        .btn {
-            display: inline-block;
-            margin: 10px;
-            padding: 12px 24px;
-            border: 1px solid #d4af37;
-            color: #d4af37;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        .btn:hover {
-            background-color: #d4af37;
-            color: #0d2b1e;
-        }
-        .section {
-            max-width: 720px;
-            margin: 40px 0;
-        }
-        ul {
-            list-style: none;
-            padding-left: 0;
-        }
-        ul li {
-            margin: 8px 0;
-        }
-        a {
-            color: #d4af37;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Beacon of Civilization – BOC</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<img alt="BOC Logo" src="logo.png"/>
-<h1>There is BTC in the world,<br/>how can BOC be absent?</h1>
-<h2>A token that guards not just value, but civilization.</h2>
-<div>
-<a class="btn" href="https://solscan.io/token/99oAQkuwi9BcRX2xXzqLTgKbmaZex63tmJAcnDGhDDJQ" target="_blank">View Token</a>
-<a class="btn" href="https://t.me/BoconiaOfficial" target="_blank">Join Telegram</a>
-<a class="btn" href="https://x.com/BOCcivil" target="_blank">Follow on X</a>
-</div>
-<div class="section">
-<h2>What is BOC?</h2>
-<p>BOC, short for Beacon of Civilization, is more than just a token. It is a decentralized sanctuary created on the Solana blockchain—dedicated to freedom, dignity, and the defense of civil values in the digital age. While Bitcoin stands for trust, BOC stands for everything we choose to guard.</p>
-</div>
-<div class="section">
-<h2>Token Details</h2>
-<ul>
-<li><strong>Name:</strong> Boconia (BOC)</li>
-<li><strong>Total Supply:</strong> 210,000,000</li>
-<li><strong>Blockchain:</strong> Solana</li>
-<li><strong>Token Address:</strong> <a href="https://solscan.io/token/99oAQkuwi9BcRX2xXzqLTgKbmaZex63tmJAcnDGhDDJQ" target="_blank">99oAQ...</a></li>
-</ul>
-</div>
-<div class="section"><h2>Whitepaper</h2><p>Our vision for the future is documented in the BOC Whitepaper. <br/><a href="/whitepaper/chapter7.pdf" target="_blank">Read Chapter 7: Civic Trust Loan</a></p></div><div class="section">
-<h2>Connect with Us</h2>
-<p>Join the growing community of digital citizens who believe in the values of decentralization and integrity.</p>
-<ul>
-<li><a href="https://x.com/BOCcivil" target="_blank">Follow us on X</a></li>
-<li><a href="https://t.me/BoconiaOfficial" target="_blank">Join our Telegram</a></li>
-<li><a href="https://www.boconia.com" target="_blank">Visit our website</a></li>
-</ul>
-</div>
-</body></html>
+  <header>
+    <nav>
+      <div class="logo">BOC</div>
+      <ul>
+        <li><a href="#mission">Mission</a></li>
+        <li><a href="#whitepaper">Whitepaper</a></li>
+        <li><a href="#loan">Trust Loan</a></li>
+        <li><a href="#buy">Join the Flame</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <section id="hero">
+    <div class="container">
+      <h1>Beacon of Civilization</h1>
+      <h2>A spark for those who still believe.</h2>
+      <p>We didn’t build for hype.<br>
+      We built for memory, for meaning, and for the days after the flood.</p>
+      <p><strong>BOC is not a coin. It’s a stand.</strong><br>
+      A stand for truth, dignity, and those who still carry the torch.</p>
+    </div>
+  </section>
+
+  <section id="mission">
+    <div class="container">
+      <h3>We’re not fighting the dark — we’re building the light.</h3>
+      <p>BOC is a decentralized, uncensored token designed to empower, not divide — to shine light, not throw shade.</p>
+      <p>Because in an age where silence is safe and obedience is rewarded, choosing to build something better is the boldest act of all.</p>
+    </div>
+  </section>
+
+  <section id="whitepaper">
+    <div class="container">
+      <h3>Whitepaper</h3>
+      <p>Read the full vision behind BOC. This is not just a token. It’s a map to a possible tomorrow.</p>
+      <a href="assets/whitepaper/whitepaper.pdf" target="_blank" class="button">📄 View Whitepaper</a>
+    </div>
+  </section>
+
+  <section id="loan">
+    <div class="container">
+      <h3>Civic Trust Loan</h3>
+      <p>Our lending system is not about interest, but trust. Borrow BOC, backed not by your wealth — but your willingness to stand.</p>
+    </div>
+  </section>
+
+  <section id="buy">
+    <div class="container">
+      <h3>Join the Flame</h3>
+      <p>Acquire BOC — not because it’s hype, but because you still believe.</p>
+      <img src="assets/qr.png" alt="QR Code" style="max-width:180px; margin: 20px auto;" />
+      <a href="https://raydium.io/swap/?inputMint=99oAQkuwi9BcRX2xXzqLTgKbmaZex63tmJAcnDGhDDJQ&outputMint=EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v&amount=0" class="button">🔥 Buy BOC on Raydium</a>
+    </div>
+  </section>
+
+  <footer>
+    <p>“NICE. I AM HERE. I RESTART THE WORLD.”</p>
+  </footer>
+</body>
+</html>
