--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     header {
       text-align: center;
       padding: 120px 30px 80px;
-      background: url('assets/boc_logo.png') no-repeat center top 40px;
+      background: url('assets/boc_logo.png') no-repeat center 40px;
       background-size: 128px;
     }
     h1 {
