--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     }
     header {
       text-align: center;
-      padding: 120px 30px 80px;
-      background: url('assets/boc_logo.png') no-repeat center 40px;
+      padding: 150px 30px 80px;
+      background: url('assets/boc_logo.png') no-repeat center top 40px;
       background-size: 128px;
     }
     h1 {
       font-size: 2.8em;
       margin-bottom: 10px;
-      color: #f5f5f5;
+      color: #FFD700;
     }
     h2 {
       font-weight: normal;
