--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     h1 {
       font-size: 2.8em;
       margin-bottom: 10px;
-      color: #FFD700;
+      color: #f5f5f5;
     }
     h2 {
       font-weight: normal;
